# tech_challenge1

./: .env.example  .gitignore  README.md  pyproject.toml  render.yaml
tech_challenge1/: README.md  pyproject.toml
tech_challenge1/api/: main.py  tech_challenge1.db
tech_challenge1/api/data/: livros.csv
tech_challenge1/api/routes/: auth.py  books.py  logs.py  metrics.py  ml.py  scraping.py  stats.py
tech_challenge1/core/: security.py  settings.py
tech_challenge1/db/: database.py
tech_challenge1/models/: book_model.py  user.py
tech_challenge1/scripts/: dashboard.py  scrape.py
tech_challenge1/tests/: tech_challenge1.db  test_health.py
tech_challenge1/utils/: logging.py
